WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81167
Crash in WKTR under addChromeInputField due to using 0 as a key in a HashMap
https://bugs.webkit.org/show_bug.cgi?id=81167
Summary
Crash in WKTR under addChromeInputField due to using 0 as a key in a HashMap
Jessie Berlin
Reported
2012-03-14 16:09:06 PDT
Crash in WKTR under addChromeInputField due to using 0 as a key in a HashMap
Attachments
Patch
(1.25 KB, patch)
2012-03-14 16:09 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2012-03-14 16:09:30 PDT
Created
attachment 131948
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-14 16:11:23 PDT
Attachment 131948
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/WebKitTestRunner..." exit_code: 1 Tools/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jessie Berlin
Comment 3
2012-03-14 16:15:44 PDT
Comment on
attachment 131948
[details]
Patch Added the bug number to the change log and committed in
http://trac.webkit.org/changeset/110777
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug