Crash in WKTR under addChromeInputField due to using 0 as a key in a HashMap https://bugs.webkit.org/show_bug.cgi?id=81167

Reviewed by Sam Weinig.

Do not use 0 as a key in a HashMap.

* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
cacheLayoutTestControllerCallback uses the enum as keys for the callback map.

Canonical link: https://commits.webkit.org/98341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110777 268f45cc-cd09-0410-ab3c-d52691b4dbfc