Tools/WebKitTestRunner/InjectedBundle/LayoutTestController.cpp
@@ -538,7 +538,7 @@ static CallbackMap& callbackMap()
 }
 
 enum {
-    AddChromeInputFieldCallbackID,
+    AddChromeInputFieldCallbackID = 1,
     RemoveChromeInputFieldCallbackID,
     FocusWebViewCallbackID,
     SetBackingScaleFactorCallbackID
